--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
 </head>
 <body>
     <h1>Ahoj, tohle je můj první web. 🚀</h1>
-    <p>Moje jméno je <strong>Adam Tretera.</strong></p>
-    <img src="./images/profile.webp" alt="adam tretra" width="50">
+    <p>Moje jméno je <strong>Ondra šešina. 🐒🍌</strong></p>
+    <img src="./images/mrmonkey.jpg" alt="adam tretra" width="200">
     <br>
     <a href="https://www.notservis.cz/">
-        Moje oblíbená stránka
+        nejoblíbenější web 🦄
     </a>
+    <h4>
+        Muj vtip 😂
+    </h4>
+    <p>
+        <i>Přijdou malomocní do školy a povídají: „Tak schválně, co nám dneska odpadne.“</i>
+    </p>
+
 </body>
 </html>
